TheKabal (18 May 2013)
--------------------------------------
When the database was active, the registry ($config_values, generally) was not being populated (fixed).

TheKabal (13 May 2013)
--------------------------------------
BntFile was incorrectly reporting its error status, and the config file had booleans, which BntFile was not importing correctly. Switched them to 0/1 for false/true, which now work correctly.
Game config's schema had a column for description, but it was not used, and was set to not null, which caused errors
Scheduler "repeate" changed to "repeat" for clarity
Create universe cleanup including removing some debug code, making comment style consistent, fixing some indention levels, etc.
Create universe - switch random to use adodb's $db->random, which is more portal than our temporary fix
Create universe - switch timestamp code to use now() from php instead, which offloads work to php and is more portable
Create universe - improve SQL calls to use column names in more places, omit un-needed/default settings in sql calls, and make debugging slightly easier
Create universe - Add new variables for Game Admin name, ship name, and zone name (and use them during CU)
Create universe - Massive cleanup of formatting / indention / etc. Slight appearance improvements for consistency

TheKabal (12 May 2013)
--------------------------------------
Recoded create_universe and the schemas to support running on postgresql, which brings some benefits of correctness in code to mysql as well.

TheKabal (1 April 2013)
--------------------------------------
BntText::gotoMain needs $db and $lang to pass to BntTranslate::load
load_languages has been replaced with the new class & method BntTranslate::load, which returns the $langvars array. No joke.

TheKabal (16 March 2013)
--------------------------------------
Replace old $l_whatever language variables with new $langvars variables instead.

TheKabal (9 March 2013)
--------------------------------------